updated program and other minor changes

--- a/index.html
+++ b/index.html
@@ -247,7 +247,7 @@
         <!--  Section Title -->
         <div class="container section-title" data-aos="fade-up">
           <h2>Program</h2>
-          <p></p>
+          <p><b>IMPORTANT NOTICE</b>: we're running a satellite online conference on Wednesday 25th of October, from 14:00 to 15:00, on how to write an efficient project for the BrainHack. Email us if you want to attend it online!</p>
         </div><!-- End Section Title -->
 
         <ul class="nav nav-tabs" role="tablist" data-aos="fade-up" data-aos-delay="100">
@@ -292,7 +292,7 @@
               <div class="col-md-2"><time>10:00 AM</time></div>
               <div class="col-md-10">
                 <div class="speaker">
-                  <img src="images/program/person.png" alt="Mathieu Gilson, David Meunier, Ruggero Basanisi">
+                  <img src="images/program/Intro.png" alt="Mathieu Gilson, David Meunier, Ruggero Basanisi">
                 </div>
                 <h4>Introduction to BrainHack<span> - Mathieu Gilson, David Meunier, Ruggero Basanisi</span></h4>
                 <p>Joint introduction to BrainHack Marseille and Lucca</p>
@@ -300,7 +300,7 @@
             </div>
 
             <div class="row schedule-item">
-              <div class="col-md-2"><time>10:30 AM</time></div>
+              <div class="col-md-2"><time>10:15 AM</time></div>
               <div class="col-md-10">
                 <div class="speaker">
                   <img src="images/program/training.gif" alt="Julien Caugant">
@@ -311,13 +311,35 @@
             </div>
 
             <div class="row schedule-item">
-              <div class="col-md-2"><time>12:00 AM</time></div>
+              <div class="col-md-2"><time>11:45 AM</time></div>
               <div class="col-md-10">
                 <div class="speaker">
                   <img src="images/program/training.gif" alt="Speaker to define">
                 </div>
-                <h4>Training session 2<span> - Speaker to define</span></h4>
-                <p>TBA</p>
+                <h4>Training session 2<span> - CEDRE Team</span></h4>
+                <p>Jupyter Notebook</p>
+              </div>
+            </div>
+
+            <div class="row schedule-item">
+              <div class="col-md-2"><time>12:10 AM</time></div>
+              <div class="col-md-10">
+                <div class="speaker">
+                  <img src="images/program/training.gif" alt="Speaker to define">
+                </div>
+                <h4>Training session 3<span> - CEDRE Team</span></h4>
+                <p>AI tools for machine learning</p>
+              </div>
+            </div>
+
+            <div class="row schedule-item">
+              <div class="col-md-2"><time>12:10 AM</time></div>
+              <div class="col-md-10">
+                <div class="speaker">
+                  <img src="images/program/training.gif" alt="Speaker to define">
+                </div>
+                <h4>Training session 4<span> - CEDRE Team</span></h4>
+                <p>JAX</p>
               </div>
             </div>
 
@@ -333,32 +355,32 @@
             </div>
 
             <div class="row schedule-item">
-              <div class="col-md-2"><time>14:30 PM</time></div>
+              <div class="col-md-2"><time>14:00 PM</time></div>
               <div class="col-md-10">
                 <div class="speaker">
                   <img src="images/program/person.png" alt="Speaker to define">
                 </div>
-                <h4>Key Notes<span> - Speaker to define</span></h4>
+                <h4>Sharing expertise<span> - Speaker to define</span></h4>
                 <p>TBA</p>
               </div>
             </div>
 
             <div class="row schedule-item">
-              <div class="col-md-2"><time>15:30 PM</time></div>
+              <div class="col-md-2"><time>14:40 PM</time></div>
               <div class="col-md-10">
                 <div class="speaker">
-                  <img src="images/program/training.gif" alt="Speaker to define">
+                  <img src="images/program/person.png" alt="Speaker to define">
                 </div>
-                <h4>Training session 3<span> - Speaker to define</span></h4>
-                <p>TBA</p>
+                <h4>Sharing expertise<span> - Marmaduke & Manuel</span></h4>
+                <p>Green session and round table</p>
               </div>
             </div>
 
             <div class="row schedule-item">
-              <div class="col-md-2"><time>16:15 PM</time></div>
+              <div class="col-md-2"><time>15:20 PM</time></div>
               <div class="col-md-10">
                 <div class="speaker">
-                  <img src="images/program/coffee_break.gif" alt="Willow Trantow">
+                  <img src="images/program/coffee_break.gif" alt="COFFEEEEEE">
                 </div>
                 <h4>Coffee Break<span></span></h4>
                 <p>Coffee Break will be served at 'La Pecora Nera'</p>
@@ -366,18 +388,29 @@
             </div>
 
             <div class="row schedule-item">
-              <div class="col-md-2"><time>16:40 PM</time></div>
+              <div class="col-md-2"><time>15:50 PM</time></div>
               <div class="col-md-10">
                 <div class="speaker">
-                  <img src="images/program/training.gif" alt="Speaker to define">
+                  <img src="images/program/Felix-Hoffstaedter.jpg" alt="Speaker to define">
                 </div>
-                <h4>Training session 4<span> - Speaker to define</span></h4>
-                <p>TBA</p>
+                <h4>Sharing expertise<span> - Felix Hoffstaedter (Julich, BABS)</span></h4>
+                <p>Open-source projects</p>
               </div>
             </div>
 
             <div class="row schedule-item">
-              <div class="col-md-2"><time>17:00 PM</time></div>
+              <div class="col-md-2"><time>16:30 PM</time></div>
+              <div class="col-md-10">
+                <div class="speaker">
+                  <img src="images/program/cohenadad.png" alt="Speaker to define">
+                </div>
+                <h4>Sharing expertise<span> - Julien Cohen-Adad (Montreal, Polytech)</span></h4>
+                <p>Open-source projects</p>
+              </div>
+            </div>
+
+            <div class="row schedule-item">
+              <div class="col-md-2"><time>17:10 PM</time></div>
               <div class="col-md-10">
                 <div class="speaker">
                   <img src="images/program/project.jpg" alt="Projects' Presentation">
@@ -685,7 +718,8 @@
               <!-- <div class="icon align-items-left"><a href="" target="_blank"><i class="bi bi-card-checklist"></i></a></div> -->
               <div class="d-flex flex-column align-items-center">
                 <h4 class="title reg-btn" title="Registration will be open soon!"><a href="https://forms.gle/qvCD6tmfA88HmyoBA" target="_blank" class="stretched-link">Register</a></h4>
-                <p class="description">Register now using the google form!</p>
+                <p class="description">Register now using the google form.</p>
+                <p class="description">There are still <b>50 places available!</b></p>
               </div>
             </div>
           </div><!-- End register Item -->
@@ -758,9 +792,10 @@
       <!--  Section Title -->
       <div class="container section-title" data-aos="fade-up">
         <h2>Projects</h2>
-        <p>Here you can find all the informations about the event projects. <br>
-        If you want to submit a project you should follow the link, fill the form, and open a github issue.<br>
-        Projects can be anything you'd like to work on during the event with other people (coding, discussing a procedure with coworkers, brainstorming about a new idea), as long as you're ready to minimally organize this! </p>
+        <p>Here you can find all the informations about the proposed projects. <br>
+        If you want to submit a project you should first register, then follow the link to fill the form through a github issue.<br>
+        Projects can be anything you'd like to work on during the event with other people (coding, discussing a procedure with coworkers, brainstorming about a new idea), as long as you're ready to minimally organize this!</p>
+        <p><b>We're going to have a satellite online conference on Wednesday 25th of October, from 14:00 to 15:00, on how to write an efficient project for the BrainHack.<br> Email us if you want to attend it online! Otherwise you can join us at the meeting room in San Ponziano.</b></p>
       </div><!-- End Section Title -->
 
       <div class="container submit d-flex flex-column align-items-center">
@@ -998,7 +1033,7 @@
             </div>
             <div class="member-info text-center">
               <h4>Ruggero Basanisi</h4>
-              <span>Research Collaborator</span>
+              <span>PostDoctoral Fellow</span>
               <!-- <p>Sint sint eveniet explicabo amet consequatur nesciunt error enim rerum earum et omnis fugit eligendi cupiditate vel</p> -->
             </div>
           </div><!-- End Team Member -->
