changes in program and updated participants number

--- a/index.html
+++ b/index.html
@@ -333,7 +333,7 @@
             </div>
 
             <div class="row schedule-item">
-              <div class="col-md-2"><time>12:10 AM</time></div>
+              <div class="col-md-2"><time>12:30 AM</time></div>
               <div class="col-md-10">
                 <div class="speaker">
                   <img src="images/program/training.gif" alt="Speaker to define">
@@ -358,10 +358,10 @@
               <div class="col-md-2"><time>14:00 PM</time></div>
               <div class="col-md-10">
                 <div class="speaker">
-                  <img src="images/program/person.png" alt="Speaker to define">
+                  <img src="images/program/RB.jpeg" alt="Ruggero Basanisi">
                 </div>
-                <h4>Sharing expertise<span> - Speaker to define</span></h4>
-                <p>TBA</p>
+                <h4>Sharing expertise<span> - Ruggero Basanisi (Lucca, IMT)</span></h4>
+                <p>How to 'Git' on with a clean code</p>
               </div>
             </div>
 
@@ -667,6 +667,13 @@
 
           <div class="col-lg-3 col-md-6">
             <div class="stats-item text-center w-100 h-100">
+              <span data-purecounter-start="0" data-purecounter-end="6" data-purecounter-duration="3" class="purecounter"></span>
+              <p>Teaching hours</p>
+            </div>
+          </div><!-- End Stats Item -->
+
+          <div class="col-lg-3 col-md-6">
+            <div class="stats-item text-center w-100 h-100">
               <span data-purecounter-start="0" data-purecounter-end="14" data-purecounter-duration="3" class="purecounter"></span>
               <p>Hacking hours</p>
             </div>
@@ -681,15 +688,8 @@
 
           <div class="col-lg-3 col-md-6">
             <div class="stats-item text-center w-100 h-100">
-              <span data-purecounter-start="0" data-purecounter-end="10" data-purecounter-duration="3" class="purecounter"></span>
+              <span data-purecounter-start="0" data-purecounter-end="21" data-purecounter-duration="3" class="purecounter"></span>
               <p>Participants</p>
-            </div>
-          </div><!-- End Stats Item -->
-
-          <div class="col-lg-3 col-md-6">
-            <div class="stats-item text-center w-100 h-100">
-              <span data-purecounter-start="0" data-purecounter-end="10" data-purecounter-duration="3" class="purecounter"></span>
-              <p>Organizers</p>
             </div>
           </div><!-- End Stats Item -->
 
@@ -719,7 +719,7 @@
               <div class="d-flex flex-column align-items-center">
                 <h4 class="title reg-btn" title="Registration will be open soon!"><a href="https://forms.gle/qvCD6tmfA88HmyoBA" target="_blank" class="stretched-link">Register</a></h4>
                 <p class="description">Register now using the google form.</p>
-                <p class="description">There are still <b>50 places available!</b></p>
+                <p class="description">There are still <b>45 places available!</b></p>
               </div>
             </div>
           </div><!-- End register Item -->
