added video for project leaders

--- a/index.html
+++ b/index.html
@@ -795,7 +795,7 @@
         <p>Here you can find all the informations about the proposed projects. <br>
         If you want to submit a project you should first register, then follow the link to fill the form through a github issue.<br>
         Projects can be anything you'd like to work on during the event with other people (coding, discussing a procedure with coworkers, brainstorming about a new idea), as long as you're ready to minimally organize this!</p>
-        <p><b>We're going to have a satellite online conference on Wednesday 25th of October, from 14:00 to 15:00, on how to write an efficient project for the BrainHack.<br> Email us if you want to attend it online! Otherwise you can join us at the meeting room in San Ponziano.</b></p>
+        <p><b><a href="https://drive.google.com/file/d/1I8PQb1FDyXtRYeU_LaL7Nhab7dEzZdAo/view?usp=sharing" target="_blank">Click here to watch a short video about "How to write a project for the BrainHack"</a></b>, in which we discuss how a project should be conceived and project leaders' duties.</p>
       </div><!-- End Section Title -->
 
       <div class="container submit d-flex flex-column align-items-center">
