--- a/index.html
+++ b/index.html
@@ -247,7 +247,7 @@
         <!--  Section Title -->
         <div class="container section-title" data-aos="fade-up">
           <h2>Program</h2>
-          <p><b>IMPORTANT NOTICE</b>: we're running a satellite online conference on Wednesday 25th of October, from 14:00 to 15:00, on how to write an efficient project for the BrainHack. Email us if you want to attend it online!</p>
+          <p><b>IMPORTANT NOTICE</b>: we have run a satellite online short talk on how to write an efficient project for the BrainHack.<br> You can find the link to the video in the heading of the <a href="#projects"><b>Projects section</b></a></p>
         </div><!-- End Section Title -->
 
         <ul class="nav nav-tabs" role="tablist" data-aos="fade-up" data-aos-delay="100">
