--- a/index.html
+++ b/index.html
@@ -681,14 +681,14 @@
 
           <div class="col-lg-3 col-md-6">
             <div class="stats-item text-center w-100 h-100">
-              <span data-purecounter-start="0" data-purecounter-end="2" data-purecounter-duration="3" class="purecounter"></span>
+              <span data-purecounter-start="0" data-purecounter-end="3" data-purecounter-duration="3" class="purecounter"></span>
               <p>Projects</p>
             </div>
           </div><!-- End Stats Item -->
 
           <div class="col-lg-3 col-md-6">
             <div class="stats-item text-center w-100 h-100">
-              <span data-purecounter-start="0" data-purecounter-end="21" data-purecounter-duration="3" class="purecounter"></span>
+              <span data-purecounter-start="0" data-purecounter-end="32" data-purecounter-duration="3" class="purecounter"></span>
               <p>Participants</p>
             </div>
           </div><!-- End Stats Item -->
@@ -719,7 +719,7 @@
               <div class="d-flex flex-column align-items-center">
                 <h4 class="title reg-btn" title="Registration will be open soon!"><a href="https://forms.gle/qvCD6tmfA88HmyoBA" target="_blank" class="stretched-link">Register</a></h4>
                 <p class="description">Register now using the google form.</p>
-                <p class="description">There are still <b>45 places available!</b></p>
+                <p class="description">There are still <b>27 places available!</b></p>
               </div>
             </div>
           </div><!-- End register Item -->
@@ -809,6 +809,7 @@
 
         <hr>
 
+        <!--Project 1-->
         <div class="row gy-4 align-items-stretch justify-content-between projects-item ">
           <div class="col-lg-5 d-flex align-items-center projects-img-bg" data-aos="zoom-out">
             <img src="images/projects/project1.jpeg" class="img-fluid" alt="">
@@ -844,6 +845,7 @@
 
         <hr>
 
+        <!--Project 2-->
         <div class="row gy-4 align-items-center projects-item">
           <div class="col-lg-6 d-flex justify-content-center flex-column" data-aos="fade-up">
             <h3><a href="https://github.com/brainhacklucca/brainhacklucca.github.io/issues/2" target="_blank">NeuroInfer</a></h3>
@@ -886,6 +888,48 @@
         </div><!-- Project Item RIGHT-->
 
         <hr>
+
+        <!--Project 3-->
+        <div class="row gy-4 align-items-stretch justify-content-between projects-item ">
+          <div class="col-lg-5 d-flex align-items-center projects-img-bg" data-aos="zoom-out">
+            <img src="images/projects/project3.png" class="img-fluid" alt="">
+          </div>
+
+          <div class="col-lg-6 d-flex justify-content-center flex-column" data-aos="fade-up">
+            <h3><a href="https://github.com/brainhacklucca/brainhacklucca.github.io/issues/3" target="_blank">Exploring and Exploting Behavior in Research Career Trajectories: Developing a Niche Index for Single Researchers.</a></h3>
+            <p>By Lorenzo Teresi & Roberto Pizziol</p>
+            <a class="btn btn-get-started align-self-start" type="button" data-bs-toggle="collapse" data-bs-target="#collapse_prj3">Description</a>
+
+            <div class="collapse" id='collapse_prj3'>
+              <p>
+                <br>
+                The landscape of scientific research is shaped by the dual forces of exploitation—deepening knowledge within established domains—and exploration—venturing into novel areas. Traditional metrics such as citation counts fail to capture the nuanced interplay of these behaviors. This proposal introduces a novel Niche Index, designed to quantify researchers' tendencies towards exploitation or exploration, thereby offering a multidimensional view of scientific contributions.<br>
+                Objectives:
+                <ul>
+                  <li>To develop a Niche Index that quantifies the exploitation and exploration behaviors in research scientists.</li>
+                  <li>Compare the different proposed metrics, including a comparison with traditional research indicators (e.g., h-index)</li>
+                  <li>To create a framework that allows academic institutions to understand the research dynamics of their faculty better, informing resource allocation and strategic planning.</li>
+                </ul>
+                
+                <b>Goals for the BrainHack:</b>
+                <ul>
+                  <li>Day 1: Foundation and Framework Development</li>
+                  <li>Day 2: Analysis and Development</li>
+                  <li>Day 3: Refinement and Presentation</li>
+                </ul>
+                <b>Contributors' skills:</b>
+                <br>
+                <ul>
+                  <li>Natural Language Processing and Network analysis</li>
+                  <li>Data Management and Web Scraping</li>
+                  <li>Literature Review and Synthesis</li>
+                  <li>Data Visualization and Presentation Tools</li>
+                </ul>
+              </p>
+            </div>
+
+          </div>
+        </div><!-- Project Item LEFT-->
 
       </div>
 
