updates final program

--- a/index.html
+++ b/index.html
@@ -266,7 +266,6 @@
         </ul>
 
         <h3 class="sub-heading">
-          <b>PROGRAM IN PROGRESS</b><br>
           You can find the complete BrainHack Lucca program here.<br> <!--Insert PDF download-->
           The first day is dedicated to teaching, with training sessions on different open science tools.<br>
           The following days will be focused on collaborative working (hacking sessions).
@@ -289,7 +288,7 @@
             </div>
 
             <div class="row schedule-item">
-              <div class="col-md-2"><time>10:00 AM</time></div>
+              <div class="col-md-2"><time>09:45 AM</time></div>
               <div class="col-md-10">
                 <div class="speaker">
                   <img src="images/program/Intro.png" alt="Mathieu Gilson, David Meunier, Ruggero Basanisi">
@@ -300,7 +299,7 @@
             </div>
 
             <div class="row schedule-item">
-              <div class="col-md-2"><time>10:15 AM</time></div>
+              <div class="col-md-2"><time>10:00 AM</time></div>
               <div class="col-md-10">
                 <div class="speaker">
                   <img src="images/program/training.gif" alt="Julien Caugant">
@@ -311,7 +310,7 @@
             </div>
 
             <div class="row schedule-item">
-              <div class="col-md-2"><time>11:45 AM</time></div>
+              <div class="col-md-2"><time>11:30 AM</time></div>
               <div class="col-md-10">
                 <div class="speaker">
                   <img src="images/program/training.gif" alt="Speaker to define">
@@ -322,24 +321,13 @@
             </div>
 
             <div class="row schedule-item">
-              <div class="col-md-2"><time>12:10 AM</time></div>
+              <div class="col-md-2"><time>12:15 AM</time></div>
               <div class="col-md-10">
                 <div class="speaker">
                   <img src="images/program/training.gif" alt="Speaker to define">
                 </div>
                 <h4>Training session 3<span> - CEDRE Team</span></h4>
                 <p>AI tools for machine learning</p>
-              </div>
-            </div>
-
-            <div class="row schedule-item">
-              <div class="col-md-2"><time>12:30 AM</time></div>
-              <div class="col-md-10">
-                <div class="speaker">
-                  <img src="images/program/training.gif" alt="Speaker to define">
-                </div>
-                <h4>Training session 4<span> - CEDRE Team</span></h4>
-                <p>JAX</p>
               </div>
             </div>
 
@@ -371,7 +359,7 @@
                 <div class="speaker">
                   <img src="images/program/person.png" alt="Speaker to define">
                 </div>
-                <h4>Sharing expertise<span> - Marmaduke & Manuel</span></h4>
+                <h4>Sharing expertise<span> - Marmaduke & Manuel Mercier (AMU, INS)</span></h4>
                 <p>Green session and round table</p>
               </div>
             </div>
@@ -688,7 +676,7 @@
 
           <div class="col-lg-3 col-md-6">
             <div class="stats-item text-center w-100 h-100">
-              <span data-purecounter-start="0" data-purecounter-end="36" data-purecounter-duration="3" class="purecounter"></span>
+              <span data-purecounter-start="0" data-purecounter-end="39" data-purecounter-duration="3" class="purecounter"></span>
               <p>Participants</p>
             </div>
           </div><!-- End Stats Item -->
@@ -719,7 +707,7 @@
               <div class="d-flex flex-column align-items-center">
                 <h4 class="title reg-btn" title="Registration will be open soon!"><a href="https://forms.gle/qvCD6tmfA88HmyoBA" target="_blank" class="stretched-link">Register</a></h4>
                 <p class="description">Register now using the google form.</p>
-                <p class="description">There are still <b>24 places available!</b></p>
+                <p class="description">There are still <b>21 places available!</b></p>
               </div>
             </div>
           </div><!-- End register Item -->
