--- a/index.html
+++ b/index.html
@@ -576,7 +576,7 @@
                   <img src="images/program/breakfast.jpg" alt="Breakfast">
                 </div>
                 <h4>Breakfast</h4>
-                <p>Breakfast will be served at ????</p>
+                <p>Breakfast will be served at 'La Pecora Nera'</p>
               </div>
             </div>
 
