--- a/index.html
+++ b/index.html
@@ -359,7 +359,7 @@
                 <div class="speaker">
                   <img src="images/program/person.png" alt="Speaker to define">
                 </div>
-                <h4>Sharing expertise<span> - Marmaduke & Manuel Mercier (AMU, INS)</span></h4>
+                <h4>Sharing expertise<span> - Marmaduke Woodman (AMU, INS), Manuel Mercier (AMU, INS) & Julien Lefevre (AMU, INT)</span></h4>
                 <p>Green session and round table</p>
               </div>
             </div>
@@ -484,10 +484,10 @@
               <div class="col-md-2"><time>17:00 PM</time></div>
               <div class="col-md-10">
                 <div class="speaker">
-                  <img src="images/program/person.png" alt="Speaker">
+                  <img src="images/program/project.jpg" alt="Speaker">
                 </div>
-                <h4>Presentation<span> - Speaker to define</span></h4>
-                <p>TBA</p>
+                <h4>Intermediate projects presentation<span> - Projects Leaders</span></h4>
+                <p>Small intermediate presentation by project leaders in Marseille and Lucca</p>
               </div>
             </div>
 
@@ -676,7 +676,7 @@
 
           <div class="col-lg-3 col-md-6">
             <div class="stats-item text-center w-100 h-100">
-              <span data-purecounter-start="0" data-purecounter-end="39" data-purecounter-duration="3" class="purecounter"></span>
+              <span data-purecounter-start="0" data-purecounter-end="41" data-purecounter-duration="3" class="purecounter"></span>
               <p>Participants</p>
             </div>
           </div><!-- End Stats Item -->
@@ -707,7 +707,7 @@
               <div class="d-flex flex-column align-items-center">
                 <h4 class="title reg-btn" title="Registration will be open soon!"><a href="https://forms.gle/qvCD6tmfA88HmyoBA" target="_blank" class="stretched-link">Register</a></h4>
                 <p class="description">Register now using the google form.</p>
-                <p class="description">There are still <b>21 places available!</b></p>
+                <p class="description">There are still <b>19 places available!</b></p>
               </div>
             </div>
           </div><!-- End register Item -->
