--- a/index.html
+++ b/index.html
@@ -676,7 +676,7 @@
 
           <div class="col-lg-3 col-md-6">
             <div class="stats-item text-center w-100 h-100">
-              <span data-purecounter-start="0" data-purecounter-end="41" data-purecounter-duration="3" class="purecounter"></span>
+              <span data-purecounter-start="0" data-purecounter-end="49" data-purecounter-duration="3" class="purecounter"></span>
               <p>Participants</p>
             </div>
           </div><!-- End Stats Item -->
@@ -694,7 +694,8 @@
       <div class="container section-title" data-aos="fade-up">
         <h2>Register</h2>
         <p>Registration <b>is now open!</b></p>
-        <p>Registration will be <b>open until 15/11/2023</b>.</p>
+        <p style='color:red'><b>REGISTRATION DEADLINE IS EXTENDED</b></p>
+        <p>Registration will be <b>open until 20/11/2023</b>.</p>
       </div><!-- End Section Title -->
 
       <div class="container">
@@ -707,7 +708,7 @@
               <div class="d-flex flex-column align-items-center">
                 <h4 class="title reg-btn" title="Registration will be open soon!"><a href="https://forms.gle/qvCD6tmfA88HmyoBA" target="_blank" class="stretched-link">Register</a></h4>
                 <p class="description">Register now using the google form.</p>
-                <p class="description">There are still <b>19 places available!</b></p>
+                <p class="description">There are still <b>11 places available!</b></p>
               </div>
             </div>
           </div><!-- End register Item -->
