--- a/index.html
+++ b/index.html
@@ -693,9 +693,11 @@
       <!--  Section Title -->
       <div class="container section-title" data-aos="fade-up">
         <h2>Register</h2>
-        <p>Registration <b>is now open!</b></p>
-        <p style='color:red'><b>REGISTRATION DEADLINE IS EXTENDED</b></p>
-        <p>Registration will be <b>open until 20/11/2023</b>.</p>
+        <!-- <p>Registration <b>is now open!</b></p> -->
+        <!-- <p style='color:red'><b>REGISTRATION DEADLINE IS EXTENDED</b></p> -->
+        <!-- <p>Registration will be <b>open until 20/11/2023</b>.</p> -->
+        <p>Registration <b>is now closed.</b></p>
+        <p>Email us if you want to try to get a late registration.</p>
       </div><!-- End Section Title -->
 
       <div class="container">
@@ -706,9 +708,10 @@
             <div class="register-btn align-items-center justify-content-center d-flex">
               <!-- <div class="icon align-items-left"><a href="" target="_blank"><i class="bi bi-card-checklist"></i></a></div> -->
               <div class="d-flex flex-column align-items-center">
-                <h4 class="title reg-btn" title="Registration will be open soon!"><a href="https://forms.gle/qvCD6tmfA88HmyoBA" target="_blank" class="stretched-link">Register</a></h4>
-                <p class="description">Register now using the google form.</p>
-                <p class="description">There are still <b>3 places available!</b></p>
+                <h4 class="title reg-btn" title="Registration will be open soon!"><a href="https://forms.gle/qvCD6tmfA88HmyoBA" target="_blank" class="stretched-link" style='background-color: grey'>Register</a></h4>
+                <!-- <p class="description">Register now using the google form.</p> -->
+                <p class="description">Registration is closed.</p>
+                <!-- <p class="description">There are still <b>3 places available!</b></p> -->
               </div>
             </div>
           </div><!-- End register Item -->
@@ -793,6 +796,10 @@
         </button>
         <p>Click to submit a project filling a GitHub issue template!</p>
       </div>
+
+      <!-- Start Carousel -->
+      
+      <!-- End Carousel -->
 
       <div class="container">
 
@@ -1476,6 +1483,7 @@
   <!-- Other JS File -->
   <script src="assets/js/countdown.js"></script>
   <script src="assets/js/sendmail.js"></script>
+  <script src="assets/js/carousel.js"></script>
 
 </body>
 
