updated participants checklist

--- a/index.html
+++ b/index.html
@@ -676,7 +676,7 @@
 
           <div class="col-lg-3 col-md-6">
             <div class="stats-item text-center w-100 h-100">
-              <span data-purecounter-start="0" data-purecounter-end="58" data-purecounter-duration="3" class="purecounter"></span>
+              <span data-purecounter-start="0" data-purecounter-end="59" data-purecounter-duration="3" class="purecounter"></span>
               <p>Participants</p>
             </div>
           </div><!-- End Stats Item -->
@@ -723,7 +723,7 @@
                 <h4 class="title">Participants checklist</h4>
                 <p class="description">In order to facilitate the participation to first day's training sessions, participants are recommended to follow these few preliminar steps:
                   <ul>
-                    <li><i class="bi bi-check"></i><p>Make a <a href="https://github.com/" target="_blank">GitHub</a> account</p></li>
+                    <li><i class="bi bi-check"></i><p>Install <a href="https://git-scm.com/downloads" target="_blank">git</a> and make a <a href="https://github.com/" target="_blank">GitHub</a> account</p></li>
                     <li><i class="bi bi-check"></i><p>Install Anaconda (<a href="https://www.anaconda.com/download" target="_blank">full</a> or <a href="https://docs.conda.io/projects/miniconda/en/latest/" target="_blank">mini</a> version)</p></li>
                     <li><i class="bi bi-check"></i><p>Install an IDE (<a href="https://www.spyder-ide.org/" target="_blank">Spyder</a>, <a href="https://www.jetbrains.com/pycharm/">PyCharm Community</a> or <a href="https://code.visualstudio.com/">VisualStudio Code</a>)</p></li>
                   </ul></p>
