--- a/index.html
+++ b/index.html
@@ -720,7 +720,7 @@
             <div class="register-item align-items-center justify-content-center d-flex">
               <div class="icon flex-shrink-0"><i class="bi bi-card-checklist"></i></div>
               <div>
-                <h4 class="title">Participants checklist</h4>
+                <h4 class="title">Participants' checklist</h4>
                 <p class="description">In order to facilitate the participation to first day's training sessions, participants are recommended to follow these few preliminar steps:
                   <ul>
                     <li><i class="bi bi-check"></i><p>Install <a href="https://git-scm.com/downloads" target="_blank">git</a> and make a <a href="https://github.com/" target="_blank">GitHub</a> account</p></li>
