added presentation link

--- a/index.html
+++ b/index.html
@@ -349,7 +349,7 @@
                   <img src="images/program/RB.jpeg" alt="Ruggero Basanisi">
                 </div>
                 <h4>Sharing expertise<span> - Ruggero Basanisi (Lucca, IMT)</span></h4>
-                <p>How to 'Git' on with a clean code</p>
+                <p><a href="https://docs.google.com/presentation/d/1PC12aUREXt-h4GnVK_56bzBGjaLda3z8HRGiXUdhf04/edit?usp=sharing" target="_blank">How to 'Git' on with a clean code</a></p>
               </div>
             </div>
 
