--- a/index.html
+++ b/index.html
@@ -360,7 +360,7 @@
                   <img src="images/program/person.png" alt="Speaker to define">
                 </div>
                 <h4>Sharing expertise<span> - Marmaduke Woodman (AMU, INS), Manuel Mercier (AMU, INS) & Julien Lefevre (AMU, INT)</span></h4>
-                <p>Green session and round table</p>
+                <p>Programming, energy and environement, does 'green-coding' exist?</p>
               </div>
             </div>
 
