--- a/index.html
+++ b/index.html
@@ -927,6 +927,49 @@
           </div>
         </div><!-- Project Item LEFT-->
 
+        <hr>
+
+        <!--Project 4-->
+        <div class="row gy-4 align-items-center projects-item">
+          <div class="col-lg-6 d-flex justify-content-center flex-column" data-aos="fade-up">
+            <h3><a href="https://github.com/brainhacklucca/brainhacklucca.github.io/issues/4" target="_blank">Synergistic Network of Depressive Traits</a></h3>
+            <p>
+              by Ern Wong & Emanuele Agrimi
+            </p>
+            <a class="btn btn-get-started align-self-start" type="button" data-bs-toggle="collapse" data-bs-target="#collapse_prj4">Description</a>
+
+            <div class="collapse" id='collapse_prj4'>
+              <p>
+                <br>
+                Higher-order interactions provide sophisticated descriptions of complex and dynamical networks beyond what contemporary pairwise analysis can capture. Particularly, to support cognitive functions, brain regions are thought to collaborate synergistically, i.e. by means of complex and rich patterns that only arise from the combination of the activity of multiple regions.
+                <br>
+                Since these synergies are thought to subserve higher cognitive functions, they could contribute to our understanding of psychiatric impairments. This project thus aims to build synergistic networks of brain function from resting-state fMRI and to identify network characteristics that may be indicative of depressive traits, and that may help in patient classification.
+                <br>
+                <br>
+                <b>Goals for the BrainHack:</b>
+                <br>
+                <ul>
+                  <li>Create a pipeline for building and analysing synergistic networks.</li>
+                  <li>Leverage rs-fMRI data from HCP Young Adult to identify network characteristics that correlate with depressive traits measured from a composite scale.</li>
+                  <li>Preprocess functional and anatomical data from an independent dataset (Bezmaternykh et al., 2021).</li>
+                </ul>
+                <b>Contributors' skills:</b>
+                <br>
+                <ul>
+                  <li>Familiarity with fMRI</li>
+                  <li>General proficiency with Python/MATLAB/Bash</li>
+                  <li>Network analysis</li>
+                  <li>Data Visualisation and Communication</li>
+                </ul>
+              </p>
+            </div>
+
+          </div>
+          <div class="col-lg-5 d-flex align-items-center projects-img-bg" data-aos="zoom-out">
+            <img src="images/projects/project4.png" class="img-fluid" alt="">
+          </div>
+        </div><!-- Project Item RIGHT-->
+
       </div>
 
     </section><!-- End Projects Section -->
