--- a/index.html
+++ b/index.html
@@ -970,6 +970,51 @@
           </div>
         </div><!-- Project Item RIGHT-->
 
+        <hr>
+
+        <!--Project 5-->
+        <div class="row gy-4 align-items-stretch justify-content-between projects-item ">
+          <div class="col-lg-5 d-flex align-items-center projects-img-bg" data-aos="zoom-out">
+            <img src="images/projects/project5.png" class="img-fluid" alt="">
+          </div>
+
+          <div class="col-lg-6 d-flex justify-content-center flex-column" data-aos="fade-up">
+            <h3><a href="https://github.com/brainhacklucca/brainhacklucca.github.io/issues/5" target="_blank">PACman: finding Phase-Amplitude Coupling events in continuous EEG recordings in an automatic manner</a></h3>
+            <p>By Davide Marzoli & Guillaume Legendre</p>
+            <a class="btn btn-get-started align-self-start" type="button" data-bs-toggle="collapse" data-bs-target="#collapse_prj5">Description</a>
+
+            <div class="collapse" id='collapse_prj5'>
+              <p>
+                <br>
+                Neuronal oscillation, a process where neurons communicate with rhythmic patterns, can be observed as waves in electroencephalographic (EEG) recordings of brain signals. This communication mode is a cost-efficient way to achieve various cognitive processes ranging from temporal binding of sensory inputs, attention selection to even memory consolidation. Recent developments in our understanding of neuronal oscillation suggest that the phase of slower oscillations can modulates the amplitude of faster neuronal oscillations, a phenomenon known as Phase-Amplitude Coupling (PAC). PAC can be observed in large part of the scalp with EEG and is a putative mechanism for distributing information among large-scale networks with implications for learning, memory consolidation and retrieval.
+                <br>
+                This project aims to develop an algorithm for detecting PAC events in continuous EEG recordings, focusing initially on the detection of slow-waves coupled with spindles since their co-occurrence is a well characterized phenomenon in sleep EEG and will serve as ‘ground-truth’ for the validation of the method.
+                <br>
+                The successful method will be adapted to be extend to the cross-coupling of any kind of frequency range, increasing the possibility of usage to a broader extent and answering new biological questions.
+                <br>
+                <br>
+                <b>Goals for the BrainHack:</b>
+                <ul>
+                  <li>Review the literature on methods of Phase-Amplitude Coupling (PAC) to determine the methods best suited for our algorithm.</li>
+                  <li>Detect visually specific PAC events (namely Slow-oscillation-spindle coupling) in whole-night EEG recordings.</li>
+                  <li>Implement the method to extract PAC in a time-frequency manner.</li>
+                  <li>Implement a clustering algorithm to detect and label automatically changes in PAC.</li>
+                  <li>Test and validate the full algorithm on the previously labeled whole-night EEG recordings.</li>
+                </ul>
+                <b>Contributors' skills:</b>
+                <br>
+                <ul>
+                  <li>Python coding</li>
+                  <li>Experience in EEG</li>
+                  <li>Experience in signal processing</li>
+                  <li>Experience in clustering algorithm</li>
+                </ul>
+              </p>
+            </div>
+
+          </div>
+        </div><!-- Project Item LEFT-->
+
       </div>
 
     </section><!-- End Projects Section -->
