added projects 6 and 7

--- a/index.html
+++ b/index.html
@@ -1015,6 +1015,92 @@
           </div>
         </div><!-- Project Item LEFT-->
 
+        <hr>
+
+        <!--Project 6-->
+        <div class="row gy-4 align-items-center projects-item">
+          <div class="col-lg-6 d-flex justify-content-center flex-column" data-aos="fade-up">
+            <h3><a href="https://github.com/brainhacklucca/brainhacklucca.github.io/issues/6" target="_blank">EEG-Based Sensory Classification using Machine Learning</a></h3>
+            <p>
+              by Linda Fiorini & Francesco Pietrogiacomi
+            </p>
+            <a class="btn btn-get-started align-self-start" type="button" data-bs-toggle="collapse" data-bs-target="#collapse_prj6">Description</a>
+
+            <div class="collapse" id='collapse_prj6'>
+              <p>
+                <br>
+                Understanding how the brain perceives the world has always been one of the most intriguing topics in neuroscience. We want to apply machine learning (ML) techniques to classify the electrophysiological signal of the brain recorded during sensory stimulation in healthy subjects. This project endeavors to decode the unique neural signatures associated with auditory and visual stimulation by integrating ML and neuroscience, in particular electroencephalography (EEG) data. ML has been applied to EEG in various fields, such as motor imagery (e.g. Amin et al., 2019) and emotions recognition (Wang et al., 2021), as well as for clinical purposes (e.g. Ozdemir et Al., 2021) but only few researches on sensory processing using ML have been published. We will analyze EEG data collected for a study on anticipatory multisensory integration (Fiorini et al., 2023).
+                <br>
+                Potential applications of this project could be extended to better understand brain activity in states of altered consciousness - i.e., sleep, vegetative state, and coma - as well as in the field of brain-computer interfaces (BCI).
+                <br>
+                We aim to demonstrate the novel use of AI in enhancing our knowledge of neural dynamics, specifically in sensory processing. The interdisciplinary nature of this project - bridging neuroscience, artificial intelligence, and sensory psychology - offers a unique perspective and contributes significantly to the field of cognitive science and neurotechnology.
+                <br>
+                <br>
+                <b>Goals for the BrainHack:</b>
+                <br>
+                <ul>
+                  <li>Deepen the literature about application of deep learning on EEG</li>
+                  <li>Define EEG data preprocessing pipeline</li>
+                  <li>Implement different models to classify EEG signal</li>
+                  <li>Train and test the models</li>
+                </ul>
+                <b>Contributors' skills:</b>
+                <br>
+                <ul>
+                  <li>EEG signal processing</li>
+                  <li>Machine Learning/Deep Learning</li>
+                  <li>Python programming</li>
+                </ul>
+              </p>
+            </div>
+
+          </div>
+          <div class="col-lg-5 d-flex align-items-center projects-img-bg" data-aos="zoom-out">
+            <img src="images/projects/project6.png" class="img-fluid" alt="">
+          </div>
+        </div><!-- Project Item RIGHT-->
+
+        <hr>
+
+        <!--Project 7-->
+        <div class="row gy-4 align-items-stretch justify-content-between projects-item ">
+          <div class="col-lg-5 d-flex align-items-center projects-img-bg" data-aos="zoom-out">
+            <img src="images/projects/project7.png" class="img-fluid" alt="">
+          </div>
+
+          <div class="col-lg-6 d-flex justify-content-center flex-column" data-aos="fade-up">
+            <h3><a href="https://github.com/brainhacklucca/brainhacklucca.github.io/issues/7" target="_blank">LRG: Zooming out the brain scales</a></h3>
+            <p>By Tommaso Gili</p>
+            <a class="btn btn-get-started align-self-start" type="button" data-bs-toggle="collapse" data-bs-target="#collapse_prj7">Description</a>
+
+            <div class="collapse" id='collapse_prj7'>
+              <p>
+                <br>
+                Structural connectivity in the brain is typically studied by reducing its observation to a single spatial resolution. However, the brain possesses a rich architecture organised over multiple scales linked to one another (Betzel and Bassett, 2017). Simple organising principles underlie the multiscale architecture of human structural brain networks, where the same connectivity law dictates short- and long-range connections between different brain regions over many resolutions. Such a multiscale property can be appreciated by progressively coarse-graining the connected anatomical regions by changing the observation resolution.
+                <br>
+                This project aims to apply a recently proposed graph coarse-graining method (the Laplacian Renormalization Group: Villegas et al., 2023) to the human connectome and identify the network density's role in identifying multiple connectivity scales.
+                <br>
+                <br>
+                <b>Goals for the BrainHack:</b>
+                <ul>
+                  <li>To create a pipeline for an effective structural network sparsification, starting from probabilistic and deterministic tractography of multiple subjects.</li>
+                  <li>To adapt the Laplacian Renormalization Group algorithm for the human connectome.</li>
+                  <li>To establish the working limits of a non-geometric coarse-graining in terms of network density.</li>
+                </ul>
+                <b>Contributors' skills:</b>
+                <br>
+                <ul>
+                  <li>Familiarity with DTI and Tractography</li>
+                  <li>General proficiency with Python/MATLAB/Bash</li>
+                  <li>Network analysis</li>
+                  <li>Data Visualisation and Communication</li>
+                </ul>
+              </p>
+            </div>
+
+          </div>
+        </div><!-- Project Item LEFT-->
+
       </div>
 
     </section><!-- End Projects Section -->
