--- a/index.html
+++ b/index.html
@@ -620,7 +620,7 @@
                   <img src="images/program/coffee_break.gif" alt="Willow Trantow">
                 </div>
                 <h4>Coffee Break<span></span></h4>
-                <p>Coffee Break will be served at ????</p>
+                <p>Coffee Break will be served at 'La Pecora Nera'</p>
               </div>
             </div>
 
