updated team, open registration, open project submission

--- a/index.html
+++ b/index.html
@@ -711,10 +711,10 @@
             <div class="register-btn align-items-center justify-content-center d-flex">
               <!-- <div class="icon align-items-left"><a href="" target="_blank"><i class="bi bi-card-checklist"></i></a></div> -->
               <div class="d-flex flex-column align-items-center">
-                <h4 class="title reg-btn" title="Registration will be open soon!"><a href="https://forms.gle/qvCD6tmfA88HmyoBA" target="_blank" class="stretched-link" style='background-color: grey'>Register</a></h4>
+                <h4 class="title reg-btn" title="Registration is now open!"><a href="https://docs.google.com/forms/d/e/1FAIpQLSfeTKq92mNCrwTCkhqD1CxR2sHfK4zMnjrvjHyX5mLoId8kEA/viewform?usp=sharing" target="_blank" class="stretched-link" style='background-color: orange'>Register</a></h4>
                 <!-- <p class="description">Register now using the google form.</p> -->
                 <!-- <p class="description">There are still <b>3 places available!</b></p> -->
-                <p class="description">Registration is closed.</p>
+                <p class="description">Registration <b>is now open!</b></p>
               </div>
             </div>
           </div><!-- End register Item -->
@@ -794,8 +794,8 @@
       </div><!-- End Section Title -->
 
       <div class="container submit d-flex flex-column align-items-center">
-        <button>
-          <a href="https://github.com/brainhacklucca/brainhacklucca.github.io/issues/new?assignees=&labels=project&projects=&template=brainhack-project-template-2023.yml" target="_blank">Submit a Project</a>
+        <button style="background-color: orange">
+          <a href="https://github.com/brainhacklucca/brainhacklucca.github.io/issues/new?assignees=&labels=project&projects=&template=brainhack-project-template-2024.yml" target="_blank">Submit a Project</a>
         </button>
         <p>Click to submit a project filling a GitHub issue template!</p>
       </div>
@@ -921,23 +921,6 @@
             </div>
           </div><!-- End Team Member -->
 
-          <div class="col-lg-4 col-md-6 member" data-aos="fade-up" data-aos-delay="200">
-            <div class="member-img">
-              <img src="images/team/GA.jpg" class="img-fluid" alt="">
-              <div class="social">
-                <!-- <a href="#"><i class="bi bi-twitter"></i></a>
-                <a href="#"><i class="bi bi-facebook"></i></a>
-                <a href="#"><i class="bi bi-instagram"></i></a>
-                <a href="#"><i class="bi bi-linkedin"></i></a> -->
-              </div>
-            </div>
-            <div class="member-info text-center">
-              <h4>Giulia Avvenuti</h4>
-              <span>PostDoctoral Fellow</span>
-              <!-- <p>Labore ipsam sit consequatur exercitationem rerum laboriosam laudantium aut quod dolores exercitationem ut</p> -->
-            </div>
-          </div><!-- End Team Member -->
-
           <div class="col-lg-4 col-md-6 member" data-aos="fade-up" data-aos-delay="400">
             <div class="member-img">
               <img src="images/team/GH.jpg" class="img-fluid" alt="">
@@ -968,23 +951,6 @@
             <div class="member-info text-center">
               <h4>Guillaume Legendre</h4>
               <span>PostDoctoral Fellow</span>
-              <!-- <p>Illum minima ea autem doloremque ipsum quidem quas aspernatur modi ut praesentium vel tque sed facilis at qui</p> -->
-            </div>
-          </div><!-- End Team Member -->
-
-          <div class="col-lg-4 col-md-6 member" data-aos="fade-up" data-aos-delay="300">
-            <div class="member-img">
-              <img src="images/team/LF.jpeg" class="img-fluid" alt="">
-              <div class="social">
-                <!-- <a href="#"><i class="bi bi-twitter"></i></a>
-                <a href="#"><i class="bi bi-facebook"></i></a>
-                <a href="#"><i class="bi bi-instagram"></i></a>
-                <a href="#"><i class="bi bi-linkedin"></i></a> -->
-              </div>
-            </div>
-            <div class="member-info text-center">
-              <h4>Linda Fiorini</h4>
-              <span>PhD Student</span>
               <!-- <p>Illum minima ea autem doloremque ipsum quidem quas aspernatur modi ut praesentium vel tque sed facilis at qui</p> -->
             </div>
           </div><!-- End Team Member -->
