--- a/index.html
+++ b/index.html
@@ -974,12 +974,12 @@
 
           <div class="col-lg-4 col-md-6 member" data-aos="fade-up" data-aos-delay="300">
             <div class="member-img">
-              <img src="images/team/dude.jpg" class="img-fluid" alt="">
+              <img src="images/team/ML.jpg" class="img-fluid" alt="">
               <div class="social">
-                <!-- <a href="#"><i class="bi bi-twitter"></i></a>
-                <a href="#"><i class="bi bi-facebook"></i></a>
-                <a href="#"><i class="bi bi-instagram"></i></a>
-                <a href="#"><i class="bi bi-linkedin"></i></a> -->
+                <a href="https://matteolionello.com/" target="_blank"><i class="bi bi-person-circle"></i></a>
+                <a href="https://github.com/mlionello/" target="_blank"><i class="bi bi-github"></i></a>
+                <a href="https://scholar.google.com/citations?user=DEXi4zsAAAAJ&hl=da" target="_blank"><i class="bi bi-google"></i></a>
+                <!-- <a href="#"><i class="bi bi-linkedin"></i></a> -->
               </div>
             </div>
             <div class="member-info text-center">
